lib/salesforceParser.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = "(",
        peg$c1 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c2 = ")",
        peg$c3 = { type: "literal", value: ")", description: "\")\"" },
        peg$c4 = function(expression) { return expression; },
        peg$c5 = ".",
        peg$c6 = { type: "literal", value: ".", description: "\".\"" },
        peg$c7 = function(head, property) {
                return { property: property, computed: false };
              },
        peg$c8 = function(head, tail) {
              return tail.reduce(function(result, element) {
                return {
                  type: "memberExpression",
                  object: result,
                  property: element.property,
                  computed: element.computed
                };
              }, head);
            },
        peg$c9 = function(id, args) {
            return {
              type: "callExpression",
              id: id,
              arguments: optionalList(args)
            }
          },
        peg$c10 = function(head, op, tail) {
            var name;
            switch(op) {
              case "||":
                name = "or"
                break;
              case "&&":
                name = "and"
                break;
              default:
            }

            return {
              type: "callExpression",
              id: name,
              arguments: [head, tail]
            }
          },
        peg$c11 = function(head, op, tail) {
            var name;
            switch(op) {
              case "<":
                name = "lessThan"
                break;
              case "<=":
                name = "lessThanOrEqual"
                break;
              case ">":
                name = "greaterThan"
                break;
              case ">=":
                name = "greaterThanOrEqual"
                break;
              case "==":
              case "=":
                name = "equal"
                break;
              case "!=":
              case "<>":
                name = "unequal"
                break;
              case "&":
                name = "add"
                break;
              default:
            }

            return {
              type: "callExpression",
              id: name,
              arguments: [head, tail]
            }
          },
        peg$c12 = function(head, tail) {
            return evaluateAdditiveArithmetics(head, tail)
          },
        peg$c13 = "+",
        peg$c14 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c15 = "-",
        peg$c16 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c17 = function(op, expr) {
            return {
              operator: op,
              expression: expr
            }
          },
        peg$c18 = function(head, tail) {
            return evaluateMultiplicativeArithmetics(head, tail)
          },
        peg$c19 = "*",
        peg$c20 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c21 = "/",
        peg$c22 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c23 = "^",
        peg$c24 = { type: "literal", value: "^", description: "\"^\"" },
        peg$c25 = function(head, tail) {
            return {
              type: "callExpression",
              id: "exponentiate",
              arguments: [head, tail]
            }
          },
        peg$c26 = "<=",
        peg$c27 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c28 = ">=",
        peg$c29 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c30 = "<>",
        peg$c31 = { type: "literal", value: "<>", description: "\"<>\"" },
        peg$c32 = "<",
        peg$c33 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c34 = ">",
        peg$c35 = { type: "literal", value: ">", description: "\">\"" },
        peg$c36 = "==",
        peg$c37 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c38 = "=",
        peg$c39 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c40 = "!=",
        peg$c41 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c42 = "&&",
        peg$c43 = { type: "literal", value: "&&", description: "\"&&\"" },
        peg$c44 = "||",
        peg$c45 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c46 = "&",
        peg$c47 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c48 = function(tail) {
            return {
              type: "callExpression",
              id: "not",
              arguments: [tail]
            }
          },
        peg$c49 = "!",
        peg$c50 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c51 = function(args) {
              return args;
            },
        peg$c52 = ",",
        peg$c53 = { type: "literal", value: ",", description: "\",\"" },
        peg$c54 = function(arg) {
              return arg;
            },
        peg$c55 = function(args) {
            return args;
          },
        peg$c56 = /^[A-Z]/,
        peg$c57 = { type: "class", value: "[A-Z]", description: "[A-Z]" },
        peg$c58 = function(id) { return id.join("").toLowerCase(); },
        peg$c59 = function(name) { return name; },
        peg$c60 = function(head, tail) {
              return {
                type: "identifier",
                name: head + tail.join("")
              };
            },
        peg$c61 = "_",
        peg$c62 = { type: "literal", value: "_", description: "\"_\"" },
        peg$c63 = /^[A-Za-z]/,
        peg$c64 = { type: "class", value: "[A-Za-z]", description: "[A-Za-z]" },
        peg$c65 = function(chars) {
              return {
                type: "literal",
                value: chars.join(""),
                dataType: "text",
                options: {
                  length: chars.length
                }
              };
            },
        peg$c66 = function(sign) {
              var splitted = text().replace(/[\+\-]/g, "").split(".")
              return {
                type: "literal",
                value: parseFloat(text()),
                dataType: "number",
                options: {
                  length: splitted[0].length,
                  scale: splitted[1].length,
                }
              };
            },
        peg$c67 = function(sign) {
              return {
                type: "literal",
                value: parseInt(text()),
                dataType: "number",
                options: {
                  length: text().replace(/[\+\-]/g, "").length,
                  scale: 0,
                }
              };
          },
        peg$c68 = "0",
        peg$c69 = { type: "literal", value: "0", description: "\"0\"" },
        peg$c70 = /^[0-9]/,
        peg$c71 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c72 = /^[1-9]/,
        peg$c73 = { type: "class", value: "[1-9]", description: "[1-9]" },
        peg$c74 = "TRUE",
        peg$c75 = { type: "literal", value: "TRUE", description: "\"TRUE\"" },
        peg$c76 = function() {
            return {
              type: "literal",
              value: true,
              dataType: "checkbox",
              options: {}
            }
          },
        peg$c77 = "FALSE",
        peg$c78 = { type: "literal", value: "FALSE", description: "\"FALSE\"" },
        peg$c79 = function() {
            return {
              type: "literal",
              value: false,
              dataType: "checkbox",
              options: {}
            }
          },
        peg$c80 = "\\",
        peg$c81 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c82 = function() { return text(); },
        peg$c83 = "'",
        peg$c84 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c85 = "\"",
        peg$c86 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c87 = { type: "any", description: "any character" },
        peg$c88 = /^[\n\r\u2028\u2029]/,
        peg$c89 = { type: "class", value: "[\\n\\r\\u2028\\u2029]", description: "[\\n\\r\\u2028\\u2029]" },
        peg$c90 = "\t",
        peg$c91 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c92 = "\x0B",
        peg$c93 = { type: "literal", value: "\x0B", description: "\"\\x0B\"" },
        peg$c94 = "\f",
        peg$c95 = { type: "literal", value: "\f", description: "\"\\f\"" },
        peg$c96 = " ",
        peg$c97 = { type: "literal", value: " ", description: "\" \"" },
        peg$c98 = "\xA0",
        peg$c99 = { type: "literal", value: "\xA0", description: "\"\\xA0\"" },
        peg$c100 = "\uFEFF",
        peg$c101 = { type: "literal", value: "\uFEFF", description: "\"\\uFEFF\"" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parsePrimaryExpression();

      return s0;
    }

    function peg$parsePrimaryExpression() {
      var s0;

      s0 = peg$parseLogicalConcatinationExpression();
      if (s0 === peg$FAILED) {
        s0 = peg$parseUnaryExpression();
        if (s0 === peg$FAILED) {
          s0 = peg$parseMemberExpression();
          if (s0 === peg$FAILED) {
            s0 = peg$parseCallExpression();
            if (s0 === peg$FAILED) {
              s0 = peg$parseLiteral();
            }
          }
        }
      }

      return s0;
    }

    function peg$parseLeftHandSideExpression() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$parseCallExpression();
      if (s0 === peg$FAILED) {
        s0 = peg$parseMemberExpression();
        if (s0 === peg$FAILED) {
          s0 = peg$parseLiteral();
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 40) {
              s1 = peg$c0;
              peg$currPos++;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c1); }
            }
            if (s1 !== peg$FAILED) {
              s2 = peg$parse__();
              if (s2 !== peg$FAILED) {
                s3 = peg$parseLogicalConcatinationExpression();
                if (s3 !== peg$FAILED) {
                  s4 = peg$parse__();
                  if (s4 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 41) {
                      s5 = peg$c2;
                      peg$currPos++;
                    } else {
                      s5 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c3); }
                    }
                    if (s5 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c4(s3);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          }
        }
      }

      return s0;
    }

    function peg$parseMemberExpression() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseIdentifier();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parse__();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 46) {
            s5 = peg$c5;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse__();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseIdentifierName();
              if (s7 !== peg$FAILED) {
                peg$savedPos = s3;
                s4 = peg$c7(s1, s7);
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 46) {
              s5 = peg$c5;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c6); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse__();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseIdentifierName();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s3;
                  s4 = peg$c7(s1, s7);
                  s3 = s4;
                } else {
                  peg$currPos = s3;
                  s3 = peg$FAILED;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c8(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseCallExpression() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseFunctionIdentifier();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseArguments();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c9(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseLogicalConcatinationExpression() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseLogicalCompareExpression();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseLogicalConcatinationOperator();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseLogicalConcatinationExpression();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c10(s1, s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseLogicalCompareExpression();
      }

      return s0;
    }

    function peg$parseLogicalCompareExpression() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseAdditiveExpression();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseLogicalCompareOperator();
          if (s3 === peg$FAILED) {
            s3 = peg$parseConcatinationOperator();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseLogicalCompareExpression();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c11(s1, s3, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseAdditiveExpression();
      }

      return s0;
    }

    function peg$parseAdditiveExpression() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseMultiplicativeExpression();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseAddtitivePart();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parseAddtitivePart();
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c12(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseMultiplicativeExpression();
      }

      return s0;
    }

    function peg$parseAddtitivePart() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 43) {
          s2 = peg$c13;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
        if (s2 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 45) {
            s2 = peg$c15;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c16); }
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseMultiplicativeExpression();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c17(s2, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseMultiplicativeExpression() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseExponentiateExpression();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseMultiplicativePart();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parseMultiplicativePart();
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c18(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseExponentiateExpression();
      }

      return s0;
    }

    function peg$parseMultiplicativePart() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 42) {
          s2 = peg$c19;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c20); }
        }
        if (s2 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 47) {
            s2 = peg$c21;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c22); }
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseExponentiateExpression();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c17(s2, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseExponentiateExpression() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseLeftHandSideExpression();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 94) {
            s3 = peg$c23;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c24); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseExponentiateExpression();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c25(s1, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseLeftHandSideExpression();
      }

      return s0;
    }

    function peg$parseLogicalCompareOperator() {
      var s0;
